--- a/package.json
+++ b/package.json
@@ -29,12 +29,16 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^8.1.0",
     "@nestjs/typeorm": "^10.0.2",
+    "nestjs-zod": "^4.2.0",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.20",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zod-to-ts": "^1.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -57,7 +61,7 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.7.2"
   },
   "jest": {
     "moduleFileExtensions": [
