--- a/package.json
+++ b/package.json
@@ -5,7 +5,15 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "workspaces": [
+    "app",
+    "types"
+  ],
   "scripts": {
+    "generate:openapi": "ts-node scripts/generate-openapi.ts",
+    "generate-types": "openapi-typescript ../app/openapi.json --output types.ts",
+    "build:types": "yarn generate:openapi && yarn generate:types",
+    "pack:types": "cd types && yarn pack",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -37,6 +45,7 @@
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.20",
+    "workspaces": "^0.1.0",
     "zod": "^3.24.1",
     "zod-to-ts": "^1.2.0"
   },
